Fixed spacing between FAQ question and answers (#74)
* Fixed spacing between FAQ question and answers

* FAQ fixed spacing between question and answer

--- a/public/styles.css
+++ b/public/styles.css
@@ -260,6 +260,7 @@
 
 .answer {
   font-family: "rubik";
+
   line-height: 28px;
   padding-left: 60px;
   font-size: 14px;
@@ -546,6 +547,7 @@ html {
 
   .questions {
     width: 310px;
+    line-height:20px;
   }
 
 }
